--- a/public/404.html
+++ b/public/404.html
@@ -54,14 +54,17 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+<div class="fuckfooter">
+  <div class="container">
+
+      <img src="boom.png" alt="boom">
+
+      <h1>We're sorry, <br> the page you are lokking for doesn't exist...</h1>
+
+      <a href="http://www.barsand.art" class="btn btn-danger">GET BACK HOME </a>
+
+
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
 </html>
