--- a/public/500.html
+++ b/public/500.html
@@ -54,13 +54,18 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body>
   <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
+<div class="fuckfooter">
+  <div class="container">
+
+      <img src="boom.png" alt="boom">
+      <h1>We're sorry, but something went wrong...</h1>
+
+      <a href="http://www.barsand.art" class="btn btn-danger">GET BACK HOME </a>
+
+
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
 </html>
