--- a/public/422.html
+++ b/public/422.html
@@ -53,15 +53,17 @@
   }
   </style>
 </head>
+<div class="fuckfooter">
+  <div class="container">
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/422.html -->
-  <div class="dialog">
-    <div>
-      <h1>The change you wanted was rejected.</h1>
-      <p>Maybe you tried to change something you didn't have access to.</p>
+      <img src="boom.png" alt="boom">
+
+      <h1> Maybe you tried to change something you didn't have access to...</h1>
+
+      <a href="http://www.barsand.art" class="btn btn-danger">GET BACK HOME </a>
+
+
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
 </html>
